# testing_example_project

./: CMakeLists.txt  MathOperations.cpp  MathOperations.h  Operation.cpp  Operation.h  integration_test_MathOperations.cpp  mock_test_MathOperations.cpp  unit_test_MathOperations.cpp  unit_test_Operation.cpp
